@@ -35,7 +35,7 @@ response=$(jq -n --arg datetime $TIMESTAMP \
 wrapped_response=$(jq -n --argjson response "[$response]" '$ARGS.named')
 
 echo "$wrapped_response" > $DEVICE.json
-git add $DEVICE.json
+git add $DEVICE.json changelog.txt
 git commit -m "Update autogenerated json for $DEVICE $VERSION ${DATE}/${TIMESTAMP}"
 git push
 
